# MCP_learning

./: README.md  mcp-inspector-config.json  pyproject.toml  test_fastapi_mcp_client.py  test_http_mcp_client.py  test_mcp_direct.py
calculator_mcp/: fastmcp_calculator.py
fastapi-mcp/: fastapi-mcp-calculator.py
