[project]
name = "mcp-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "birenmer",email = "birenmmer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "calculator_mcp" },
]


[tool.poetry.dependencies]
langchain = "^1.1.3"
langchain-openai = "^1.1.3"
openai = "^1.51.0"
motor = "^3.6.0"
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = { extras = ["standard"], version = ">=0.35,<0.37" }
fastmcp = "2.13.2"
langgraph = "^1.0.5"
